--- a/Project1/index.html
+++ b/Project1/index.html
@@ -2,32 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="styles.css">
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Build The Community Your Fans Will Love
-
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
-
-  Register
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+  <div class="bg-image">
+    <!-- Header Logo -->
+    <header>
+      <img src="images/logo.svg" alt="Logo"/>
+    </header>
+    <!-- Main Content -->
+    <div class="row">
+      <div class="box col-md-6 col-sm-12">
+        <img class="illustration-img" src="images/illustration-mockups.svg" alt="Illustrations"/>
+      </div>
+      <div class="box col-md-6 col-sm-12">
+        <h1> Build The Community <br> Your Fans Will Love</h1>
+        <h2> Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+          Create connections with your usersas you engage in genuine discussions.</h2>
+        <div class="button-reg">
+          <button class="register-button"> Register </button>
+        </div>
+      </div>
+    </div>
+    <!-- Footer Icons -->
+    <div class="icons-list">
+      <i class="icon-facebook"></i>
+      <i class="icon-twitter"></i>
+      <i class="icon-instagram"></i>
+    </div>
+  </div>
 </body>
 </html>
+
+<!--
+<p>
+  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+  Coded by <a href="https://github.com/preetika19" target="_blank">Preetika Lakshmanan</a>.
+</p>
+-->
