--- a/Project3/index.html
+++ b/Project3/index.html
@@ -29,7 +29,7 @@
       </div>
     </div>
     <div class="desktop col-md-5 col-sm-12">
-      <img src="images/hero-desktop.jpg">
+      <img src="images/hero-desktop.jpg" class="img-desktop">
     </div>
   </div>
 
